--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-stack",
+  "name": "nuxt-vuetify-stack",
   "version": "1.0.0",
   "description": "My extraordinary Nuxt.js project",
   "author": "Mesut Koca",
